2012-11-15  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* math/libm-test.inc (check_complex): Use asprintf.

2012-11-14  Joseph Myers  <joseph@codesourcery.com>

	* debug/pcprofiledump.c (print_version): Update copyright year.
	* malloc/memusagestat.c (print_version): Likewise.

2012-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14831]
	* elf/Makefile (tests): Add tst-audit8.
	($(objpfx)tst-audit8): Also depend on $(common-objpfx)math/libm.so.
	($(objpfx)tst-audit8.out): New target.
	(tst-audit8-ENV): New variable.
	* elf/dl-runtime.c (_dl_profile_fixup): Call _dl_fixup to skip
	audit if l_reloc_result is NULL.
	(ELF_MACHINE_RUNTIME_FIXUP_PARAMS): Issue an error if it isn't
	defined and ELF_MACHINE_RUNTIME_FIXUP_ARGS is defined.
	* elf/tst-audit8.c: New file.

2012-11-14  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* io/Makefile (CFLAGS-open.c, CFLAGS-open64.c): Define.
	* misc/Makefile (CFLAGS-select.c): Define.
	* posix/Makefile (CFLAGS-pause.c): Define.

2012-11-13  David S. Miller  <davem@davemloft.net>

	* crypt/Makefile: Move test targets after toplevel Rules
	inclusion.  Grab any necessary sysdep routines when linking.
	* crypt/md5.c (md5_process_block): Remove define, we will always
	name it __md5_process_block.
	(md5_finish_ctx): Update md5_process_block call.
	(md5_stream): Likewise.
	(md5_process_bytes): Likewise.
	(md5_process_block): Rename to __md5_process_block and move to ...
	* crypt/md5-block.c: ... here.
	* crypt/sha256.c (sha256_process_block): Move to ...
	* crypt/sha256-block.c: ... here.
	* crypt/sha512.c (sha512_process_block): Move to ...
	* crypt/sha512-block.c: ... here.
	* locale/Makefile (CFLAGS-md5.c): Define to add crypt/ to include
	path.
	* sysdeps/sparc/sparc-ifunc.c (sparc_libc_ifunc): Define.
	* sysdeps/sparc/sparc64/multiarch/Makefile
	(libcrypt-sysdep_routines): Add crypto assembler sysdeps when in
	crypt subdir.
	(localedef-aux): Add md5 crypto assembler when in locale subdir.