@@ -1,3 +1,8 @@
+2012-11-16  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* libio/libioP.h: Add comment note that the references to C++
+	bits are now obsolete.
+
 2012-11-15  Marcus Shawcroft  <marcus.shawcroft@linaro.org>
 
 	* math/libm-test.inc (check_complex): Use asprintf.
